// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionDivider With inline title should render correctly 1`] = `
.c2 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

html:not([dir='rtl']) .c2 {
  margin-left: 8px;
}

html[dir='rtl'] .c2 {
  margin-right: 8px;
}

.c1 {
  background: #BABABA;
  height: 1px;
  border: none;
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
  flex-grow: 100;
  margin: auto 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <h2
    className="c2"
  >
    This is text in a SectionDivider.
  </h2>
</div>
`;

exports[`SectionDivider With inline title should render correctly with arabic script typography values 1`] = `
.c2 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

html:not([dir='rtl']) .c2 {
  margin-left: 8px;
}

html[dir='rtl'] .c2 {
  margin-right: 8px;
}

.c1 {
  background: #BABABA;
  height: 1px;
  border: none;
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
  flex-grow: 100;
  margin: auto 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <h2
    className="c2"
  >
    بعض محتوى النص
  </h2>
</div>
`;

exports[`SectionDivider With title should render correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

html:not([dir='rtl']) .c1 {
  margin-left: 8px;
}

html[dir='rtl'] .c1 {
  margin-right: 8px;
}

.c0 {
  background: #BABABA;
  height: 1px;
  border: none;
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
  flex-grow: 100;
  margin: 8px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <h2
    className="c1"
  >
    This is text in a SectionDivider.
  </h2>
</div>
`;

exports[`SectionDivider With title should render correctly with arabic script typography values 1`] = `
.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

html:not([dir='rtl']) .c1 {
  margin-left: 8px;
}

html[dir='rtl'] .c1 {
  margin-right: 8px;
}

.c0 {
  background: #BABABA;
  height: 1px;
  border: none;
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
  flex-grow: 100;
  margin: 8px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <h2
    className="c1"
  >
    بعض محتوى النص
  </h2>
</div>
`;

exports[`SectionDivider Without title should render correctly 1`] = `
.c0 {
  background: #BABABA;
  height: 1px;
  border: none;
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
  flex-grow: 100;
  margin: 8px;
}

<div
  className=""
>
  <div
    className="c0"
  />
</div>
`;
